--- a/Luis/Notebooks/T1 - 3 - Data Cleaning - Plots.ipynb
+++ b/Luis/Notebooks/T1 - 3 - Data Cleaning - Plots.ipynb
@@ -37,6 +37,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#savefig(\"path_donde_guardar_im.jpeg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
