--- a/Luis/Notebooks/T2 - 1 - Data Cleaning - Data Wrangling.ipynb
+++ b/Luis/Notebooks/T2 - 1 - Data Cleaning - Data Wrangling.ipynb
@@ -4064,6 +4064,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Total Mins'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(column_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8823493117539459\n",
+      "0.10432773786047767\n",
+      "0.9070093335163405\n",
+      "0.3063988986063515\n",
+      "0.446408872427422\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(2018)\n",
+    "for i in range(5):\n",
+    "    print(np.random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8823493117539459\n",
+      "0.10432773786047767\n",
+      "0.9070093335163405\n",
+      "0.3063988986063515\n",
+      "0.446408872427422\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(2018)\n",
+    "for i in range(5):\n",
+    "    print(np.random.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
