--- a/Luis/Notebooks/Untitled1.ipynb
+++ b/Luis/Notebooks/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,241 +11,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel(\"datos base.xlsx\")"
+    "data = pd.read_excel(\"datos base.xlsx\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DAP (cm)</th>\n",
-       "      <th>H (m)</th>\n",
-       "      <th>GE (ton/m3)</th>\n",
-       "      <th>FEB</th>\n",
-       "      <th>Indirecto (FF 0,5)</th>\n",
-       "      <th>Indirecto (FF 0,45)</th>\n",
-       "      <th>1.  CR-Segura 1999</th>\n",
-       "      <th>2.  CR-Segura 1999</th>\n",
-       "      <th>3.  CR-Mena 2008</th>\n",
-       "      <th>4.  CR-Mena 2008</th>\n",
-       "      <th>...</th>\n",
-       "      <th>72.  REG-Chave et ál. 2005</th>\n",
-       "      <th>73. REG-Brown 1989</th>\n",
-       "      <th>74. REG-Brown 1989</th>\n",
-       "      <th>75. REG-Brown 1997</th>\n",
-       "      <th>76. REG-Gillespie AJ. (Base Brown 1989)</th>\n",
-       "      <th>77. REG-Brown e Iverson 1992</th>\n",
-       "      <th>78. REG-Brown 1997</th>\n",
-       "      <th>79. REG-Chavé et al. 2014</th>\n",
-       "      <th>80. REG-Chavé et al. 2014</th>\n",
-       "      <th>PROMEDIO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.000352</td>\n",
-       "      <td>0.000317</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.000377</td>\n",
-       "      <td>0.000339</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.000402</td>\n",
-       "      <td>0.000362</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.000427</td>\n",
-       "      <td>0.000385</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.000440</td>\n",
-       "      <td>0.000396</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000559</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 87 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   DAP (cm)  H (m)  GE (ton/m3)  FEB  Indirecto (FF 0,5)  Indirecto (FF 0,45)  \\\n",
-       "0         2    4.0          0.4  1.4            0.000352             0.000317   \n",
-       "1         2    4.0          0.4  1.5            0.000377             0.000339   \n",
-       "2         2    4.0          0.4  1.6            0.000402             0.000362   \n",
-       "3         2    4.0          0.4  1.7            0.000427             0.000385   \n",
-       "4         2    4.0          0.5  1.4            0.000440             0.000396   \n",
-       "\n",
-       "   1.  CR-Segura 1999  2.  CR-Segura 1999  3.  CR-Mena 2008  4.  CR-Mena 2008  \\\n",
-       "0                 NaN                 NaN               NaN               NaN   \n",
-       "1                 NaN                 NaN               NaN               NaN   \n",
-       "2                 NaN                 NaN               NaN               NaN   \n",
-       "3                 NaN                 NaN               NaN               NaN   \n",
-       "4                 NaN                 NaN               NaN               NaN   \n",
-       "\n",
-       "   ...  72.  REG-Chave et ál. 2005  73. REG-Brown 1989  74. REG-Brown 1989  \\\n",
-       "0  ...                         NaN                 NaN                 NaN   \n",
-       "1  ...                         NaN                 NaN                 NaN   \n",
-       "2  ...                         NaN                 NaN                 NaN   \n",
-       "3  ...                         NaN                 NaN                 NaN   \n",
-       "4  ...                         NaN                 NaN                 NaN   \n",
-       "\n",
-       "   75. REG-Brown 1997  76. REG-Gillespie AJ. (Base Brown 1989)  \\\n",
-       "0                 NaN                                      NaN   \n",
-       "1                 NaN                                      NaN   \n",
-       "2                 NaN                                      NaN   \n",
-       "3                 NaN                                      NaN   \n",
-       "4                 NaN                                      NaN   \n",
-       "\n",
-       "   77. REG-Brown e Iverson 1992  78. REG-Brown 1997  \\\n",
-       "0                           NaN                 NaN   \n",
-       "1                           NaN                 NaN   \n",
-       "2                           NaN                 NaN   \n",
-       "3                           NaN                 NaN   \n",
-       "4                           NaN                 NaN   \n",
-       "\n",
-       "   79. REG-Chavé et al. 2014  80. REG-Chavé et al. 2014  PROMEDIO  \n",
-       "0                        NaN                        NaN  0.000559  \n",
-       "1                        NaN                        NaN  0.000559  \n",
-       "2                        NaN                        NaN  0.000559  \n",
-       "3                        NaN                        NaN  0.000559  \n",
-       "4                        NaN                        NaN  0.000559  \n",
-       "\n",
-       "[5 rows x 87 columns]"
+       "0           2\n",
+       "1           2\n",
+       "2           2\n",
+       "3           2\n",
+       "4           2\n",
+       "         ... \n",
+       "194338    300\n",
+       "194339    300\n",
+       "194340    300\n",
+       "194341    300\n",
+       "194342    300\n",
+       "Name: DAP (cm), Length: 194343, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "#data[\"body\"]\n",
+    "data_corregido = data['DAP (cm)']\n",
+    "data_corregido"
    ]
   },
   {
