--- a/Luis/herramientas/cargarPy.ipynb
+++ b/Luis/herramientas/cargarPy.ipynb
@@ -2,28 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import test as t"
+    "import test\n",
+    "import pandas as pd\n",
+    "import funciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "t.test()"
+    "funciones.dividir(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Fuente</th>\n",
+       "      <th>Geoservicio</th>\n",
+       "      <th>Tip_Geoserv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ejemplo</td>\n",
+       "      <td>nulo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_Fuente Geoservicio Tip_Geoserv\n",
+       "0          1     Ejemplo        nulo"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_descripcion_fuentes = pd.read_excel(\"https://github.com/Sud-Austral/CursoPython/blob/master/Luis/herramientas/_TablaCatastroDatos_DI_BsNs.xlsx?raw=true\", sheet_name=\"Geoservicios_fuentes\")\n",
+    "data_descripcion_fuentes.head()"
    ]
   },
   {
