--- a/Luis/herramientas/recolector de datos.ipynb
+++ b/Luis/herramientas/recolector de datos.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
     "        temp_csv = pd.read_html(url)[i]\n",
     "        temp_nombre = nombre + str(i)\n",
     "        temp_csv.to_excel(nombre + \"/\" + temp_nombre + \".xls\")\n",
-    "        temp_csv.to_csv(nombre + \"/\" + temp_nombre + \".csv\")\n",
+    "        temp_csv.to_csv(nombre + \"/\" + temp_nombre + \".csv\", index=False)\n",
     "        print(\"Hola\")\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -78,12 +78,23 @@
       "Ya existe la carpeta\n",
       "Hola\n",
       "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
       "Hola\n"
      ]
     }
    ],
    "source": [
-    "guardarTablaHtml(\"http://www.bienesnacionales.cl/?page_id=34027\", \"bienesnacionales\")"
+    "guardarTablaHtml(\"https://es.wikipedia.org/wiki/Chile\", \"Chile\")"
    ]
   },
   {
