--- a/Luis/Clent/DataCleaning.ipynb
+++ b/Luis/Clent/DataCleaning.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ola = pandas_profiling.ProfileReport(df)"
+    "pandas_profiling.ProfileReport(df).to_html(\"pagina.html\")"
    ]
   },
   {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
