--- a/Luis/Notebooks/T5 - 2 - Logistic regression - Implementacion.ipynb
+++ b/Luis/Notebooks/T5 - 2 - Logistic regression - Implementacion.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -625,36 +625,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        Results: Logit\n",
-      "===============================================================\n",
-      "Model:              Logit            Pseudo R-squared: 0.360   \n",
-      "Dependent Variable: y                AIC:              12.6202 \n",
-      "Date:               2020-05-12 16:47 BIC:              13.2254 \n",
-      "No. Observations:   10               Log-Likelihood:   -4.3101 \n",
-      "Df Model:           1                LL-Null:          -6.7301 \n",
-      "Df Residuals:       8                LLR p-value:      0.027807\n",
-      "Converged:          1.0000           Scale:            1.0000  \n",
-      "No. Iterations:     6.0000                                     \n",
-      "-----------------------------------------------------------------\n",
-      "          Coef.    Std.Err.      z      P>|z|     [0.025   0.975]\n",
-      "-----------------------------------------------------------------\n",
-      "x1        0.6622     0.4001    1.6551   0.0979   -0.1220   1.4464\n",
-      "const    -3.6956     2.2889   -1.6145   0.1064   -8.1818   0.7906\n",
-      "===============================================================\n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "        <td>Model:</td>              <td>Logit</td>      <td>Pseudo R-squared:</td>   <td>0.360</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <td>Dependent Variable:</td>         <td>y</td>              <td>AIC:</td>         <td>12.6202</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "         <td>Date:</td>        <td>2020-05-14 16:53</td>       <td>BIC:</td>         <td>13.2254</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "   <td>No. Observations:</td>         <td>10</td>         <td>Log-Likelihood:</td>   <td>-4.3101</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "       <td>Df Model:</td>              <td>1</td>            <td>LL-Null:</td>       <td>-6.7301</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "     <td>Df Residuals:</td>            <td>8</td>          <td>LLR p-value:</td>    <td>0.027807</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "      <td>Converged:</td>           <td>1.0000</td>           <td>Scale:</td>        <td>1.0000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "    <td>No. Iterations:</td>        <td>6.0000</td>              <td></td>              <td></td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "    <td></td>     <th>Coef.</th>  <th>Std.Err.</th>    <th>z</th>     <th>P>|z|</th> <th>[0.025</th>  <th>0.975]</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x1</th>    <td>0.6622</td>   <td>0.4001</td>  <td>1.6551</td>  <td>0.0979</td> <td>-0.1220</td> <td>1.4464</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th> <td>-3.6956</td>  <td>2.2889</td>  <td>-1.6145</td> <td>0.1064</td> <td>-8.1818</td> <td>0.7906</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary2.Summary'>\n",
+       "\"\"\"\n",
+       "                        Results: Logit\n",
+       "===============================================================\n",
+       "Model:              Logit            Pseudo R-squared: 0.360   \n",
+       "Dependent Variable: y                AIC:              12.6202 \n",
+       "Date:               2020-05-14 16:53 BIC:              13.2254 \n",
+       "No. Observations:   10               Log-Likelihood:   -4.3101 \n",
+       "Df Model:           1                LL-Null:          -6.7301 \n",
+       "Df Residuals:       8                LLR p-value:      0.027807\n",
+       "Converged:          1.0000           Scale:            1.0000  \n",
+       "No. Iterations:     6.0000                                     \n",
+       "-----------------------------------------------------------------\n",
+       "          Coef.    Std.Err.      z      P>|z|     [0.025   0.975]\n",
+       "-----------------------------------------------------------------\n",
+       "x1        0.6622     0.4001    1.6551   0.0979   -0.1220   1.4464\n",
+       "const    -3.6956     2.2889   -1.6145   0.1064   -8.1818   0.7906\n",
+       "===============================================================\n",
+       "\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(result.summary2())"
+    "result.summary2()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1.],\n",
+       "       [1., 1.],\n",
+       "       [2., 1.],\n",
+       "       [3., 1.],\n",
+       "       [4., 1.],\n",
+       "       [5., 1.],\n",
+       "       [6., 1.],\n",
+       "       [7., 1.],\n",
+       "       [8., 1.],\n",
+       "       [9., 1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
